Java: add `PUBSUB` `CHANNELS`, `NUMPAT` and `NUMSUB` commands (#2105)
Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>
Co-authored-by: Andrew Carbonetto <andrew.carbonetto@improving.com>